Bug 1451340 - Don't attempt to RegisterUnresolvedElement for native anonymous content;r=smaug

The webconsole UI generates a large number of scrollbars, and considering their children as
potential Custom Elements causes a slowdown when setting innerHTML="" when devtools closes.

MozReview-Commit-ID: 2QCcXCnTHA2